# langgraph-agentic-rag

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: huggingface-space-binary-files.md
scripts/: ingest.py  visualize_graph.py
src/: __init__.py
src/chains/: __init__.py  generation.py  router.py
src/chains/graders/: __init__.py  answer.py  hallucination.py  retrieval.py
src/config/: __init__.py  logging_config.py  prompts.py  settings.py
src/core/: __init__.py  llm.py  logging.py  state.py
src/frontend/: __init__.py  app.py
src/graph/: __init__.py  builder.py  constants.py  edges.py
src/ingestion/: __init__.py  vectorstore.py
src/nodes/: __init__.py  generate.py  grade_documents.py  retrieve.py  websearch.py
tests/: test_chains.py
vector_store/.chroma_db/: chroma.sqlite3
