[project]
name = "langgraph-agentic-rag"
version = "0.1.0"
description = "Agentic RAG application built with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core LangChain
    "langchain==1.2.8",
    "langchain-core==1.2.8",
    "langchain-openai==1.1.7",
    "langchain-community==0.4.1",
    "langchain-text-splitters==1.1.0",
    "langchain-chroma==1.1.0",
    "langchain-tavily==0.2.17",
    "langgraph==1.0.7",
    "python-dotenv==1.2.1",
    "tiktoken==0.12.0",
    "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"